--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mister Mpo >> Login Slot Online Gacor Mudah Menang</title>
     <meta name="description" content="Daftar situs link login slot online gacor mudah menang mister mpo terbaru yang dapat di nikmatin ini hari atau sekarang juga" />
     <meta name="keywords" content="slot online, login slot online, slot mpo, mister mpo, slot online gacor, slot mudah menang, slot gacor hari ini, slot, situs link gacor, slot 2023" />
-    <link itemprop="mainEntityOfPage" rel="canonical" href=" ">
+    <link itemprop="mainEntityOfPage" rel="canonical" href="http://login-slot-online.aptana.com/">
     <meta name="robots" content="index, follow" />
     <meta name="page-locale" content="id,en">
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
@@ -26,7 +26,7 @@
     <meta name="og:image" content="https://i.ibb.co/1fPdG3C/Mister-Mpo-Login-Slot-Online-Gacor-Mudah-Menang.png">
     <meta property="og:image:width" content="600">
     <meta property="og:image:height" content="200">
-    <meta name="og:url" content=" ">
+    <meta name="og:url" content="http://login-slot-online.aptana.com/">
     <meta name="og:site_name" content="slot online gacor">
     <meta name="og:locale" content="ID_id">
     <meta name="og:type" content="website">
@@ -2120,7 +2120,7 @@
           <div class="col-md-12 text-center">
             <div class="amanku">
               <span itemscope="itemscope" itemtype="http://schema.org/Brand">
-                <a itemprop="url" href=" " title="slot online gacor">
+                <a itemprop="url" href="http://login-slot-online.aptana.com/" title="slot online gacor">
                   <amp-img src="https://i.ibb.co/z8GkSjW/GAS-TRUS-ANTI-RUNGKAT-BOSKU-1-4-2023.png" alt="slot online" width="550" height="65"></amp-img>
                   <meta itemprop="name" content="slot online gacor">
                 </a>
@@ -2138,7 +2138,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <a class="btn btn-daf" href=" " target="_blank">Mister Mpo >> Login Slot Online Gacor Mudah Menang</a>
+          <a class="btn btn-daf" href="http://login-slot-online.aptana.com/" target="_blank">Mister Mpo >> Login Slot Online Gacor Mudah Menang</a>
         </div>
       </div>
     </div>
@@ -2220,8 +2220,8 @@
                         </table>
                         <br>
               <h1 style="text-align: justify;">Mister Mpo &gt;&gt; Login Slot Online Gacor Mudah Menang</h1>
-<p style="text-align: justify;">Link login kumpulan daftar <a href=" ">login slot online  gacor mudah menang mister mpo</a> ini menyajikan berbagai kelangkapan mudah menang setiap hari di jamin gacor dan menyediakan deposit paling murah cuman 5000 bisa pakai smua nya termasuk pulsa dan ewallet juga tanpa potongan. Banyak sekali berbagai permainan mesin slot dengan tingkat rtp tertinggi setiap harinya di sini bandar slot online gacor terbaru mudah menang ini menyediakan permainan slot online terlengkap dan pastinya rtp slot tertinggi di tahun 2023.</p>
-<p style="text-align: justify;">Kami menyediakan berbagai permainan bocoran slot gacor malam ini yang mudah untuk menang seperti bola online sbobet88, judi bola, sabung ayam, live casino online, situs judi <a href=" "> slot online</a> 2023, poker online, arcade online dan tembak ikan  yang akan bisa kalian mainkan selama 24 jam non stop di sini setiap harinya tanpa takut jadwal online situs ini sangat lengkap dan sangaat gacor kalian bisa mencari di pencarian google login slot online mister mpo.</p>
+<p style="text-align: justify;">Link login kumpulan daftar <a href="http://login-slot-online.aptana.com/">login slot online  gacor mudah menang mister mpo</a> ini menyajikan berbagai kelangkapan mudah menang setiap hari di jamin gacor dan menyediakan deposit paling murah cuman 5000 bisa pakai smua nya termasuk pulsa dan ewallet juga tanpa potongan. Banyak sekali berbagai permainan mesin slot dengan tingkat rtp tertinggi setiap harinya di sini bandar slot online gacor terbaru mudah menang ini menyediakan permainan slot online terlengkap dan pastinya rtp slot tertinggi di tahun 2023.</p>
+<p style="text-align: justify;">Kami menyediakan berbagai permainan bocoran slot gacor malam ini yang mudah untuk menang seperti bola online sbobet88, judi bola, sabung ayam, live casino online, situs judi <a href="http://login-slot-online.aptana.com/"> slot online</a> 2023, poker online, arcade online dan tembak ikan  yang akan bisa kalian mainkan selama 24 jam non stop di sini setiap harinya tanpa takut jadwal online situs ini sangat lengkap dan sangaat gacor kalian bisa mencari di pencarian google login slot online mister mpo.</p>
 <p style="text-align: justify;">Untuk para pemain setia yang sedang mencari link daftar situs judi slot online gampang menang terbaru di Indonesia yang memberikan bocoran slot gacor hari ini 2023 untuk membernya. Situs slot yang mudah menang yang sudah menjadi bandar situs khusus judi slot online mister mpo di Asia dengan permainan Daftar Situs Judi Slot Gacor Gampang Menang Hari Ini deposit tanpa potongan akan memberikan kalian permainan slot online gacor terbaru setiap harinya.</p>
 
 <h2 style="text-align: justify;">Games Populer Dari Setiap Kategori di Situs Slot Online Gacor Terbaru 2023</h2>
@@ -2235,7 +2235,7 @@
 <ul style="text-align: justify;">
  	<li>Roulette di Casino Online</li>
 </ul>
-<p style="text-align: justify;">Jika berbicara game Casino pada situs slot luar negeri, maka Roulette di Casino online adalah jenis <a href=" ">judi casino</a> yang memiliki peminat sangat besar. Roulette sendiri dimainkan melalui sebuah Wheel berisi angka-angka yang akan diputar berbarengan dengan bola kecil yang dilemparkan berlawanan arah putaran Wheel. Bola akan berhenti pada sebuah angka di mana pemain yang menebak dengan benar akan memperoleh bayaran sesuai tipe taruhan yang digunakan.</p>
+<p style="text-align: justify;">Jika berbicara game Casino pada situs slot luar negeri, maka Roulette di Casino online adalah jenis <a href="http://login-slot-online.aptana.com/">judi casino</a> yang memiliki peminat sangat besar. Roulette sendiri dimainkan melalui sebuah Wheel berisi angka-angka yang akan diputar berbarengan dengan bola kecil yang dilemparkan berlawanan arah putaran Wheel. Bola akan berhenti pada sebuah angka di mana pemain yang menebak dengan benar akan memperoleh bayaran sesuai tipe taruhan yang digunakan.</p>
 
 <ul style="text-align: justify;">
  	<li>Judi Bola di Sportsbook</li>
@@ -2264,7 +2264,7 @@
 <p style="text-align: justify;">Keenam jenis kategori situs judi slot online gacor mudah menang mister mpo di atas adalah jenis-jenis judi online yang banyak dicari dan dimainkan karena setiap permainan tersebut menawarkan sensasi keseruan yang berbeda-beda. Jika kamu penasaran, bisa memainkan semua game tersebut hanya pada situs slot  online gacor mudah menang mister mpo tanpa perlu memiliki banyak akun judi online lagi di sini.</p>
 
 <h3 style="text-align: justify;">Klaim Bonus Setiap Hari Di Link Login Mister MPo</h3>
-<p style="text-align: justify;">Keseriusan kami dalam menyajikan <a href=" ">link slot gacor</a> mudah menang dapat terpercaya bukanlah hanya omongan semata. Namun anda bisa membuktikan langsung ketika sudah bergabung di situs slot online mister mpo yang telah kami rekomendasikan disini. Begitu anda bergabung sudah tersedia ribuan slot online gacor mudah menang yang siap anda mainkan dengan modal receh saja sejumlah 5000 ditambah lagi bahwa kami memberikan bonus yang bisa dapat anda klaim setiap harinya, Nah yang ingin tau apa jenis bonus login slot online mudah menang mister mpo yang dapat anda klaim adalah sebagai berikut di bawah ini :</p>
+<p style="text-align: justify;">Keseriusan kami dalam menyajikan <a href="http://login-slot-online.aptana.com/">link slot gacor</a> mudah menang dapat terpercaya bukanlah hanya omongan semata. Namun anda bisa membuktikan langsung ketika sudah bergabung di situs slot online mister mpo yang telah kami rekomendasikan disini. Begitu anda bergabung sudah tersedia ribuan slot online gacor mudah menang yang siap anda mainkan dengan modal receh saja sejumlah 5000 ditambah lagi bahwa kami memberikan bonus yang bisa dapat anda klaim setiap harinya, Nah yang ingin tau apa jenis bonus login slot online mudah menang mister mpo yang dapat anda klaim adalah sebagai berikut di bawah ini :</p>
 
 <ol style="text-align: justify;">
  	<li>Freebet 25 Ribu Frechip Newmember</li>
@@ -2277,7 +2277,7 @@
  	<li>Bonus togel mp4d</li>
 </ol>
 <p style="text-align: justify;">Setelah anda mendapati bergabung bersama kami akan banyak promo bonus menarik lainnya yang tidak bisa anda lewatkan, Hal itu kami sajikan karena membuktikan bahwa situs link login slot online mudah menang yang kami rekomendasikan benar benar terpercaya dan terbaik dari kami. Dari cara memainkan game situs slot online judi mister mpo ini yang mudah membuat member baru terjun ke dunia judi mpo slot gacor dalam memilih game link slot online mister mpo situs judi slot gacor uang asli sebagai permainan yang dipilih.</p>
-<p style="text-align: justify;">Disinilah Tempatnya! Anda Bisa Bermain Segala Jenis Bandar <a href=" ">judi mister mpo</a> Slot Online Mudah menang hanya dengan daftar di agen judi slot deposit tanpa potongan mister mpo di indonesia dan nikmati kemudahan bertransaksi di Bandar Slot Online Deposit  mister mpo tanpa takut jadwal Jam Bank Offline setiap hari.</p>
+<p style="text-align: justify;">Disinilah Tempatnya! Anda Bisa Bermain Segala Jenis Bandar <a href="http://login-slot-online.aptana.com/">judi mister mpo</a> Slot Online Mudah menang hanya dengan daftar di agen judi slot deposit tanpa potongan mister mpo di indonesia dan nikmati kemudahan bertransaksi di Bandar Slot Online Deposit  mister mpo tanpa takut jadwal Jam Bank Offline setiap hari.</p>
             <div class="copyaman acenter pb-2">
               <span>&copy; 2023 Hak Cipta &#8226; Slot Online Gacor Mister Mpo Mudah </span>
             </div>
